--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -1,3 +1,6 @@
-# FROM node:16.14-alpine
-# WORKDIR /app-backend
-#  ...
+FROM node:16.14-alpine
+EXPOSE 3001
+WORKDIR /app-backend
+COPY . /app-backend/
+RUN npm install
+ENTRYPOINT ["npm", "run", "dev"]
