feat: testes login

--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -14,8 +14,7 @@
     "predev": "npm run build && npm run db:reset",
     "dev": "nodemon --watch \"./src/**\" ./src/server.ts",
     "postinstall": "if [ ! -z 'cat ./packages.npm' ]; then npm i --ignore-scripts $(cat ./packages.npm); fi",
-    "lint": "eslint ./src --ext .ts",
-    "bash:back": "docker exec -it app_backend bash"
+    "lint": "eslint ./src --ext .ts"
   },
   "keywords": [],
   "author": "",
